--- a/src/app/components/header/iconHeader/IconHeader.module.css
+++ b/src/app/components/header/iconHeader/IconHeader.module.css
@@ -5,3 +5,14 @@
     cursor: pointer;
     height: 55px;
 }
+
+@media (min-width: 992px){
+
+.img{
+    width: 39px;
+    margin-right: 6%;
+    margin-left: 1%;
+    cursor: pointer;
+    height: 55px;
+}
+}
