--- a/src/app/components/Button/ScrollToTopButton.module.css
+++ b/src/app/components/Button/ScrollToTopButton.module.css
@@ -1,7 +1,30 @@
 .scrollToTopButton {
+  position: fixed;
+  bottom: 20px; /* Ajusta la distancia desde la parte inferior */
+  right: 20px; /* Ajusta la distancia desde la parte derecha */
+  background-color: #2b803e;
+  color: white; /* Color del ícono */
+  border: none;
+  border-radius: 59%; /* Botón redondo */
+  padding: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+  transition: background-color 0.3s, box-shadow 0.3s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.scrollToTopButton:hover {
+  background-color: #194f25;
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+}
+
+@media (min-width: 992px) {
+  .scrollToTopButton {
     position: fixed;
     bottom: 20px; /* Ajusta la distancia desde la parte inferior */
-    right: 20px;  /* Ajusta la distancia desde la parte derecha */
+    right: 20px; /* Ajusta la distancia desde la parte derecha */
     background-color: #2b803e;
     color: white; /* Color del ícono */
     border: none;
@@ -14,9 +37,9 @@
     justify-content: center;
     align-items: center;
   }
-  
+
   .scrollToTopButton:hover {
     background-color: #194f25;
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
   }
-  
+}
