--- a/src/app/components/card/card-InfoDolar/PriceDolar.module.css
+++ b/src/app/components/card/card-InfoDolar/PriceDolar.module.css
@@ -1,4 +1,49 @@
 .compra {
+  margin-right: 7%;
+  background-color: #2b803e;
+  color: white;
+  display: flex;
+  justify-content: center;
+  font-size: 13px;
+  padding: 4% 6%;
+  align-items: center;
+  text-align: center;
+  border-radius: 13px;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.venta {
+  background-color: #a91111;
+  color: white;
+  font-size: 13px;
+  padding: 4% 6%;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 13px;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.containerPrices {
+  display: flex;
+  flex-direction: row;
+  font-size: 109%;
+  width: 88%;
+}
+
+.compra:hover {
+  cursor: pointer;
+  transform: scale(1.2);
+}
+
+.venta:hover {
+  transform: scale(1.2);
+  cursor: pointer;
+}
+
+@media (min-width: 992px) {
+  .compra {
     margin-right: 7%;
     background-color: #2b803e;
     color: white;
@@ -7,32 +52,32 @@
     text-align: center;
     border-radius: 13px;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
+  }
 
-.venta {
-  
-  background-color: #a91111;
-  color: white;
-  width: 116px;
-  padding: 4% 6%;
-  text-align: center;
-  border-radius: 13px;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
+  .venta {
+    background-color: #a91111;
+    color: white;
+    width: 116px;
+    padding: 4% 6%;
+    text-align: center;
+    border-radius: 13px;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  }
 
-.containerPrices{
-  display: flex;
-  flex-direction: row;
-  font-size: 109%;
-  width: 88%;
-}
+  .containerPrices {
+    display: flex;
+    flex-direction: row;
+    font-size: 109%;
+    width: 88%;
+  }
 
-.compra:hover{
-cursor: pointer;
-transform: scale(1.2);
-}
+  .compra:hover {
+    cursor: pointer;
+    transform: scale(1.2);
+  }
 
-.venta:hover{
-  transform: scale(1.2);
-  cursor: pointer;
+  .venta:hover {
+    transform: scale(1.2);
+    cursor: pointer;
+  }
 }
