--- a/src/app/components/card/card-InfoDolar/PriceDolar.module.css
+++ b/src/app/components/card/card-InfoDolar/PriceDolar.module.css
@@ -2,6 +2,7 @@
   margin-right: 7%;
   background-color: #2b803e;
   color: white;
+  width: 85px;
   display: flex;
   justify-content: center;
   font-size: 13px;
@@ -17,6 +18,7 @@
   color: white;
   font-size: 13px;
   padding: 4% 6%;
+  width: 85px;
   text-align: center;
   display: flex;
   align-items: center;
@@ -29,7 +31,7 @@
   display: flex;
   flex-direction: row;
   font-size: 109%;
-  width: 88%;
+  width: 100%;
 }
 
 .compra:hover {
