--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Aleo:ital,wght@0,100..900;1,100..900&family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Inter:wght@100..900&display=swap');
-
-@import url('https://fonts.googleapis.com/css2?family=Aleo:ital,wght@0,100..900;1,100..900&family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Inter:wght@100..900&family=Varela+Round&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
 
 body{
- /* font-family: "Aleo", serif;
+  font-family: "Manrope", sans-serif;
   font-optical-sizing: auto;
-  font-weight: 500;
-  font-style: normal;*/
-  font-family: "Varela Round", sans-serif;
-  font-weight: 400;
+  font-weight: 300;
   font-style: normal;
 }
 
