--- a/src/app/components/card/card-InfoDolar/PriceDolar.module.css
+++ b/src/app/components/card/card-InfoDolar/PriceDolar.module.css
@@ -14,7 +14,7 @@
 }
 
 .venta {
-  background-color: #a91111;
+  background-color: #711919;
   color: white;
   font-size: 13px;
   padding: 4% 6%;
@@ -57,7 +57,7 @@
   }
 
   .venta {
-    background-color: #a91111;
+    background-color: #711919;
     color: white;
     width: 116px;
     padding: 4% 6%;
