--- a/src/app/components/layouts/LayoutDolares.module.css
+++ b/src/app/components/layouts/LayoutDolares.module.css
@@ -8,7 +8,7 @@
   .h2 {
     text-align: center;
     font-size: 185%;
-    margin-bottom: 35%;
+    margin-bottom: 15%;
   }
 
   .containerH2{
@@ -16,7 +16,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 38% 0%;
+    padding: 7% 0%;
   }
 
 .IconArrowDown{
@@ -48,9 +48,9 @@
   }
 
   .h2 {
-    text-align: center;
     font-size: 185%;
-    margin-bottom: 12%;
+    margin-bottom: 20%;
+    text-align: center;
   }
 
   .containerH2{
@@ -59,6 +59,11 @@
     justify-content: center;
     align-items: center;
     padding: 0% 0%;
-    margin-bottom: 20%;
+    margin-bottom: 7%;
+    margin-top: 2%;
   }
+
+
+
+
 }
