--- a/src/app/components/header/Header.module.css
+++ b/src/app/components/header/Header.module.css
@@ -1,15 +1,13 @@
 .containerHeader {
   display: flex;
+  position: fixed;
   padding: 3% 0%;
   align-items: center;
   background-color: #2b803e;
-  margin-bottom: 2%;
   justify-content: space-between;
-  position: fixed; /* Fija el Header en la parte superior */
-  top: 0; /* Colócalo en la parte superior */
-  left: 0; /* Alineación a la izquierda */
+
   width: 100%; /* Ancho completo del viewport */
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 1);
+  /*box-shadow: 0 2px 4px rgba(0, 0, 0, 1);*/
   z-index: 1000; /* Asegúrate de que esté encima de otros elementos */
 }
 
@@ -28,7 +26,6 @@
     background-color: #2b803e;
     margin-bottom: 2%;
     justify-content: space-between;
-    position: fixed; /* Fija el Header en la parte superior */
     top: 0; /* Colócalo en la parte superior */
     left: 0; /* Alineación a la izquierda */
     width: 100%; /* Ancho completo del viewport */
