--- a/src/app/components/card/card-InfoDolar/CardInfoDolar.module.css
+++ b/src/app/components/card/card-InfoDolar/CardInfoDolar.module.css
@@ -28,6 +28,7 @@
     flex-direction: column;
     box-shadow: rgba(0, 0, 0, 0.348) 0px 3px 8px;
     margin-bottom: 4%;
+    background: var(--colorCardDolar);
     opacity: 0;
     transition: opacity 0.6s ease-in-out;
     display: flex;
@@ -46,7 +47,6 @@
 
   .span {
     text-align: end;
-    margin-right: 5%;
     font-size: 60%;
     color: grey;
   }
