--- a/src/index.css
+++ b/src/index.css
@@ -15,25 +15,31 @@ body{
 }
 
 [data-theme='dark'] {
+  --background: linear-gradient(0deg, var(--background-color), #1e3f25, var(--background-color));
   --background-color: #000000e8;
   --icon-color: #ffffff; /* Color para los íconos en el tema oscuro */
   --icon-hover-color: #aaaaaa; /* Color para íconos al pasar el mouse en tema oscuro */
   --text-color: #ffffff;
-  --colorCardDolar: #00000075;
+  --colorCardDolar: #00000036;
+  --hoverCard: #000000c2;
+  --colorButtonScroll: rgb(255, 255, 255);
 }
 
 
 /* Estilos para el modo oscuro */
 [data-theme='light'] {
+  --background: linear-gradient(0deg, var(--background-color), #437d4f, var(--background-color));
   --background-color: #ffffff;
   --text-color: #000000;
   --icon-color: #000000; /* Color para los íconos en el tema claro */
   --icon-hover-color: #555555; /* Color para íconos al pasar el mouse en tema claro */
-  --colorCardDolar: #ffffff;
+  --colorCardDolar: #ffffffd4;
+  --hoverCard: #9e9e9e;
+  --colorButtonScroll: black;
 }
 
 /* Aplicar las variables en el cuerpo */
 body {
-  background-color: var(--background-color);
+  background: var(--background);
   color: var(--text-color);
 }
