--- a/src/app/components/loader/Loader.module.css
+++ b/src/app/components/loader/Loader.module.css
@@ -1,24 +1,22 @@
-/* HTML: <div class="loader"></div> */
+/* Loader.module.css */
+
 .loader {
-    width: 60px;
-    aspect-ratio: 1;
-    border: 15px solid #ddd;
-    border-radius: 50%;
-    position: relative;
-    transform: rotate(45deg);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh; /* Ocupa toda la altura de la pantalla */
+}
+
+.spinner {
+  width: 60px; /* Ajusta el tamaño según sea necesario */
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+      transform: rotate(0deg);
   }
-  .loader::before {
-    content: "";
-    position: absolute;
-    inset: -15px;
-    border-radius: 50%;
-    border: 15px solid #514b82;
-    animation: l18 2s infinite linear;
+  100% {
+      transform: rotate(360deg);
   }
-  @keyframes l18 {
-      0%   {clip-path:polygon(50% 50%,0 0,0    0,0    0   ,0    0   ,0    0   )}
-      25%  {clip-path:polygon(50% 50%,0 0,100% 0,100% 0   ,100% 0   ,100% 0   )}
-      50%  {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,100% 100%,100% 100%)}
-      75%  {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,0    100%,0    100%)}
-      100% {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,0    100%,0    0   )}
-  }
+}
