--- a/src/app/components/LandingPage/LandigPage.module.css
+++ b/src/app/components/LandingPage/LandigPage.module.css
@@ -27,7 +27,32 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  
 }
+
+.loaderContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh; /* Ocupa toda la altura de la ventana */
+  background-color: var(--background-color); /* Asegúrate de que el fondo coincida con el tema */
+}
+
+.loader {
+  border: 8px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 8px solid var(--text-color);
+  width: 60px;
+  height: 60px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+
 
 .loading {
 }
