--- a/src/app/components/footer/Footer.module.css
+++ b/src/app/components/footer/Footer.module.css
@@ -1,10 +1,25 @@
 .h4{
   font-size: 73%;
+  margin: 7% 0 0 0;
 }
 
 .containerFooter{
   text-align: center;
-  padding: 15% 0%;
+  padding: 5% 0%;
+}
+
+.icon{
+  margin: 0 4%;
+  text-decoration: none;
+  color: var(--icon-color);
+  scale: 1.2;
+}
+
+.containerContact{
+  display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 
 @media (min-width: 992px) {
@@ -16,9 +31,27 @@
 }
 
 .containerFooter{
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   text-align: center;
   color: var(--text-color);
-  padding: 5% 0%;
+  padding: 2% 0%;
+  background: linear-gradient(180deg, var(--background-color), var(--background-color), var(--background-color));
+}
+
+
+.containerContact{
+  display: flex;
+  flex-direction: row;
+ justify-content: start;
+  align-items: center;
+}
+
+.icon{
+  margin: 0 1%;
+}
+
+.h4{
+  margin: 0% 0%;
 }
 
 }
