--- a/src/app/components/header/title/Title.module.css
+++ b/src/app/components/header/title/Title.module.css
@@ -8,7 +8,7 @@
     margin: 1.5% 0%;
     text-transform: uppercase;
     font-size: 138%;
-    color: white;
+    color: var(--text-color);
 }
 
 .title:hover{
@@ -28,7 +28,7 @@
     text-align: center;
     width: fit-content;
     margin: 1.5% 0%;
-    color: white;
+    color: var(--text-color);
     text-transform: uppercase;
     font-size: 230%;
 }
